# python-hover

./: .author  .eslintrc.json  .gitignore  .jshintrc  .prospector.yaml  .remarkrc.yaml  .vscodeignore  ANALYSIS_REPORT.md  ARCHITECTURE.md  AUTO_DISCOVERY_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG.md.backup  CONTRIBUTING.md  EXTENSION_BREAKDOWN.md  FEATURES.md  FEATURE_VERIFICATION.md  FILE_STRUCTURE_COMPLETED.md  HOVER_IMPROVEMENTS_COMPLETE.md  HOVER_IMPROVEMENTS_IMPLEMENTATION.md  HOVER_UX_IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  LOGGING_COMPLETE.md  LOGGING_REFACTORING.md  PUBLISH.md  PUBLISH_GUIDE.md  PUBLISH_SUCCESS.md  QUICKSTART.md  README.md  README_NEW.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.5.3.md  VERIFICATION_SUMMARY.md  codacy.yaml  demo.py  hover_test.py  (+11 more)
.github/workflows/: codacy.yml  codeql.yml
docs/: DEAD_CODE_REMOVAL.md  ERRORNOTIFIER_REFACTORING.md  FILE_STRUCTURE_REFACTORING.md  REFACTORING_SESSION_SUMMARY.md  architecture.md  development.md  plan.md  refactor-baseline.md
docs-engine/: docResolver.ts  searchFallback.ts
docs-engine/data/: documentationUrls.ts  enhancedExamples.ts  stdlibCorpus.ts  stdlibModules.ts  typingConstructs.ts
docs-engine/inventory/: inventoryCache.ts  inventoryFetcher.ts  inventoryParser.ts
docs-engine/pypi/: pypiClient.ts
docs-engine/src/: docResolver.ts  engineLogger.ts  sharedConstants.ts
docs-engine/test/: auditHoverCorpus.ts  inspectHoverPipeline.ts  probeResolvedHoverContent.ts
examples/: HOW_TO_TEST_MODULES.md  custom-libraries-example.json  test-hover-improvements.py
extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  CUSTOM_LIBRARIES.md  README.md  package-lock.json  package.json  tsconfig.json
extension/media/: moduleBrowserWebview.js  studioWebview.js
extension/python-helper/: helper.py  hover_sweep.py  identifier.py  requirements.txt  resolver.py  safe_import.py
extension/scripts/: hoverSweepSmoke.cjs  parameterLensSmoke.cjs  renderHoverAudit.cjs  sample.py  testHovers.ts  vscode-stub.cjs
extension/src/: activate.ts  aliasResolver.ts  config.ts  configTarget.ts  hoverLayout.ts  hoverParameterLensService.ts  hoverProvider.ts  hoverSessionState.ts  indexedSymbolActions.ts  logger.ts  lspClient.ts  nameRefinement.ts  parameterLens.ts  savedDocs.ts  (+3 more)
python-helper/: helper.py  identifier.py  inspect_test_hover.py  resolver.py  test_import.py
scripts/: build-stdlib-corpus.ts  replace-all-console-logging.js  replace-console-logging.js
shared/: confidence.ts  docKey.ts  htmlSanitizer.ts  logger.ts  pythonBuiltins.ts  types.ts  utils.ts
src/: cache.ts  codeRunner.ts  config.ts  contextDetector.ts  customDocumentation.ts  documentationFetcher.ts  documentationUrls.ts  enhancedExamples.ts  exampleEnricher.ts  extension.ts  hoverProvider.ts  hoverTheme.ts  inventory.ts  methodResolver.ts  packageDetector.ts  smartSuggestions.ts  specialMethods.ts  staticExamples.ts  symbolResolver.ts  thirdPartyLibraries.ts  types.ts  typingConstructs.ts  versionComparison.ts  versionDetector.ts
test-examples/: demo.py  dunder_test.py  hover_test_with_examples.py  pyproject.toml  python_examples.py
(+169 files in other folders)
